# cob_calibration

./: .gitignore  README  make-eclipse.sh  make-test.sh  readme.md  rosdep.yaml  stack.xml
cob_calibration/: CMakeLists.txt  package.xml
cob_calibration_config/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_calibration_config/cob3-2b/user_defined/: calibration_pattern.yaml  sensors.yaml
cob_calibration_config/cob3-3/autogenerated/: calibration_positions.yaml  system.yaml
cob_calibration_config/cob3-3/modify/: free.yaml  free_0.yaml  free_1.yaml  free_2.yaml
cob_calibration_config/cob3-3/user_defined/: calibration_seed.yaml  cameras.yaml  sensors.yaml
cob_calibration_config/cob3-5/autogenerated/: system.yaml
cob_calibration_config/cob3-5/modify/: free_1.yaml
cob_calibration_config/cob3-5/user_defined/: calibration_seed.yaml
cob_calibration_config/cob3-6/modify/: free_0.yaml  (+2 more)
cob_calibration_config/common/: cb9x6x03.yaml  minimal_system.yaml
cob_calibration_executive/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  verify_calibration.rviz
cob_calibration_executive/config/: arm_joint_configurations.yaml  torso_joint_configurations.yaml
cob_calibration_executive/launch/: chessboard_position.launch  collect_handeye_data.launch  collect_robot_calibration_data.launch  collect_robot_data.launch  collect_stereo_data.launch  generate_calibration_positions.launch  move_arm_to_calibration_position.launch  move_arm_to_handeye_position.launch  test_calibration_positions.launch  test_dh_system.launch  upload_params.launch  verify_calibration_rviz.launch
cob_calibration_executive/script/: chessboard_position_broadcast.py  collect_handeye_data.py  collect_robot_calibration_data.py  collect_robot_calibration_data_carthesian.py  collect_stereo_data.py  generate_positions.py  joint_state_listener_arm.py  joint_state_listener_torso.py  move_arm_to_calibration_position.py
cob_calibration_executive/src/: collect_robot_calibration_data.py  generate_positions.py  test_dh_chain_parameter.py  test_positions.py
cob_calibration_executive/test/: torso_ik_test.py
cob_calibration_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_calibration_msgs/msg/: CameraMeasurement.msg  ChainMeasurement.msg  Progress.msg  RobotMeasurement.msg  Transformation.msg
cob_calibration_urdf_update/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
cob_camera_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
cob_camera_calibration/launch/: auto_intrinsic_calibration.launch  calibrate_all.launch  calibrate_kinect_only.launch  calibrate_kinect_rgb.launch  calibrate_stereo.launch  publish_detections.launch  visibility_check.launch
cob_camera_calibration/script/: mono_calibration.py  publish_detections.py  stereo_calibration.py  test_bagfile.py
cob_camera_calibration/src/: mono_calibration.py  publish_detections.py  stereo_calibration.py  test_bagfile.py
cob_camera_calibration/test/: test_calibration_data.py  test_calibration_object.py  test_calibration_object_detector.py
cob_image_capture/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_image_capture/launch/: capture_all.launch  capture_kinect_only.launch  capture_kinect_rgb.launch  capture_stereo.launch  capture_stereo_only.launch  cob3-3_all.launch  cob3-3_kinect.launch  cob3-3_stereo.launch
cob_image_capture/scripts/: simple_capture_srv_caller.py
cob_image_capture/src/: image_capture.py  simple_capture_srv_caller.py
cob_laser_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
cob_laser_calibration/README/: .~lock.laser_scan_calibration_report.odt#  comment_lines.txt  detections.txt  guide_to_continuing_the_laser_scan_calibration.odt  laser_scan_calibration_report.odt
cob_laser_calibration/launch/: cal_obj.launch  cal_obj_pose_verification.launch  checkerboard_params.launch
cob_laser_calibration/objects/: border.urdf  cal_obj.urdf  cal_obj.urdf.xacro  cal_obj_3d.urdf  cal_obj_6d.urdf  cal_obj_pose_verification.urdf
cob_laser_calibration/scripts/: .test.py.swp  detect_cylinders.py  determine_cal_obj_pose.2.py  determine_cal_obj_pose.py  pose_to_checkerboard_points.py  save_detections_to_file.py  visualize_laser_scan.py  write_comment_lines_to_file.py
cob_laser_calibration/src/: determine_cal_obj_pose.py  write_comment_lines_to_file.py
cob_robot_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_robot_calibration/config/: estimate0.launch
cob_robot_calibration/launch/: _stereo_proc_ros_cob3-3.launch  collect_data.launch  generate_config.launch  run_robot_calibration.launch  run_robot_calibration_local.launch  update_calibration_urdf.launch  update_torso_calibration_urdf.launch
cob_robot_calibration/script/: collect_data.py  generate_config.py  update_cob_calibration_urdf.py  update_cob_torso_calibration_urdf.py
cob_robot_calibration/src/: collect_data.py
cob_robot_calibration/test/: get_cb_position.py  test_calibration_urdf_updater.py  test_camera_yaml_updater.py  test_with_cb.py
cob_robot_calibration_est/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
cob_robot_calibration_est/test/: camera_chain_sensor_unittest.py  camera_unittest.py  chain_sensor_unittest.py  checkerboard_unittest.py  dh_chain_unittest.py  full_chain_dh_vs_fk_arm_unittest.py  full_chain_dh_vs_fk_unittest.py  full_chain_unittest.py  robot_params_unittest.py  single_transform_unittest.py  tilting_laser_sensor_unittest.py  tilting_laser_unittest.py  torso_chain_test.py
cob_torso_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
cob_torso_calibration/launch/: torso_calibration.launch  update_torso_calibration_urdf.launch
cob_torso_calibration/script/: calibration_lower_upper_neck.py  torso_calibration.py  torso_state_calculation.py  update_cob_torso_calibration_urdf.py
cob_torso_calibration/src/: calibration_lower_upper_neck.py  update_cob_torso_calibration_urdf.py
urdf_parser_py/: CMakeLists.txt  package.xml  setup.py
(+163 files in other folders)
