<package>
  <description brief="cob_camera_calibration">

     The cob_camera_calibration package implements automatic mono and stereo calibration
     for Care-O-bot. All calibration results are automatically converted to the correct
     format and saved in the cob_hardware_config package. No manual steps are required.

  </description>
  <author>Sebastian Haug</author>
  <license>LGPL</license>
  <review status="unreviewed" notes="</run_depend>
  <url>http://ros.org/wiki/cob_camera_calibration</url>

  </run_depend>cv_bridge</run_depend>
  </run_depend>tf</run_depend>
  </run_depend>rospy</run_depend>
  </run_depend>rosbag</run_depend>
  </run_depend>cob_calibration_msgs</run_depend>
  </run_depend>cob_calibration_urdf_update</run_depend>
    

  <rosdep name="opencv2</run_depend>

</package>


<package>
  <name>cob_camera_calibration</name>
  <version>0.5.0</version>
  <description>
    The cob_camera_calibration package implements automatic mono and stereo calibration
    for Care-O-bot. All calibration results are automatically converted to the correct
    format and saved in the cob_hardware_config package. No manual steps are required.
  </description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_camera_calibration</url>
  <!-- <url type="bugtracker"></url> -->
  
  <author>Sebastian Haug</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  </run_depend>cv_bridge</run_depend>
  </run_depend>tf</run_depend>
  </run_depend>rospy</run_depend>
  </run_depend>rosbag</run_depend>
  </run_depend>cob_calibration_msgs</run_depend>
  </run_depend>cob_calibration_urdf_update</run_depend>
    

  </run_depend>opencv2</run_depend>


  <export>

  </export>
</package>

