<package>
  <name>cob_image_capture</name>
  <version>0.5.0</version>
  <description>
    This package implements a image capture node which subscribes to one or more
    image topics and dumps jpg files to the filesystem every time the capture()
    service is called.
  </description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_image_capture</url>
  <!-- <url type="bugtracker"></url> -->
  
  <author>Sebastian Haug</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  </run_depend>rospy</run_depend>
  </run_depend>cv_bridge</run_depend>
  </run_depend>sensor_msgs</run_depend>
  </run_depend>message_filters</run_depend>
  </run_depend>cob_calibration_msgs</run_depend>

  </run_depend>opencv2</run_depend>


  <export>

  </export>
</package>


