<package>
  <name>cob_laser_calibration</name>
  <version>0.5.0</version>
  <description>
    cob_laser_calibration
  </description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_laser_calibration</url>
  <!-- <url type="bugtracker"></url> -->
  
  <author>Daniel Mäki</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <run_depend>tf</run_depend>


  <export>

  </export>
</package>


