<package>
  <name>cob_torso_calibration</name>
  <version>0.5.0</version>
  <description>
    cob_torso_calibration
  </description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_torso_calibration</url>
  <!-- <url type="bugtracker"></url> -->
  
  <author>Jannik Abbenseth</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cob_camera_calibration</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>cob_robot_calibration</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>


  <export>

  </export>
</package>




