<package>
  <name>urdf_parser_py</name>
  <version>0.5.0</version>
  <description>
    robot_model_py contains a Python implementation of the urdf_parser
    package modeling various aspects of robot information, specified
    in the Xml Robot Description Format (URDF).
    
    Local copy for cob_calibration
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf_parser_py</url>
  <!-- <url type="bugtracker"></url> -->
  
  <author>David!!, Thomas Moulard</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>



  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>




